--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,21 @@ dist
 .pnp.*
 
 ##### macOS #####
-._*
+*icon?
+
+# Compiled Python files
+*.pyc
+
+# Folder view configuration files
 .DS_Store
-icon?
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+
