--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,69 @@
+######-*-*-*-*-*-*-*-######
+######*-* MAC OS *-*-######
+######-*-*-*-*-*-*-*-######
+
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+icon?
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+######-*-*-*-*-*-*-*-*-######
+######-*-* WINDOWS *-*-######
+######-*-*-*-*-*-*-*-*-######
+
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+######-*-*-*-*-*-*-*-*-######
+######-*-* NODE JS *-*-######
+######-*-*-*-*-*-*-*-*-######
+
 # Logs
 logs
 *.log
@@ -129,22 +195,6 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-##### macOS #####
-*icon?
-
-# Compiled Python files
-*.pyc
-
-# Folder view configuration files
-.DS_Store
-Desktop.ini
-
-# Thumbnail cache files
-._*
-Thumbs.db
-
-# Files that might appear on external disks
-.Spotlight-V100
-.Trashes
-
+######-*-*-*-*-*-*-*-######
+######-*-*-*-*-*-*-*-######
 
